--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_client_myinfo.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_client_myinfo.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yoonsung.nowsale.activity.LoginActivity"
     android:orientation="vertical"
     android:background="@color/app_background_color">
     <ImageView
@@ -77,7 +75,8 @@
                             android:inputType="textEmailAddress"
                             android:text="이메일"
                             android:textSize="15dp"
-                            android:theme="@style/EditTheme" />
+                            android:theme="@style/EditTheme"
+                            />
 
                         <TextView
                             android:id="@+id/txt_email"
@@ -143,7 +142,8 @@
                             android:maxLength="16"
                             android:textColor="@color/baseColor"
                             android:textSize="15dp"
-                            android:theme="@style/EditTheme" />
+                            android:theme="@style/EditTheme"
+                            />
                     </LinearLayout>
 
                     <LinearLayout
