--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_register_coupon2.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_register_coupon2.xml
@@ -16,6 +16,7 @@
         android:src="@drawable/black_back"
         android:id="@+id/back"
         android:layout_gravity="left"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,148 +25,182 @@
         android:layout_marginBottom="15dp"
 
         >
+
         <RelativeLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/whiteColor"
             android:layout_gravity="top"
-            android:id="@+id/layout"
-            >
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/whiteColor"
-                    >
-                    <LinearLayout
-                        android:layout_alignParentTop="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:id="@+id/start_layout"
-                        >
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:textSize="22sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/baseColor"
-                            android:text="STEP1"
-                            android:layout_gravity="center_horizontal"/>
+            android:background="@color/whiteColor">
 
-                    </LinearLayout>
-                    <LinearLayout
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/whiteColor">
+
+                <LinearLayout
+                    android:id="@+id/start_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_below="@id/start_layout"
-                        android:layout_marginTop="17dp"
-                        >
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="어떤 내용의 쿠폰을 등록하시겠어요?"
-                            android:gravity="center"
-                            android:id="@+id/txt_content"
-                            android:textSize="20sp"
-                            android:layout_gravity="center"
-                            android:textColor="@color/baseColor"
-                            />
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:text="STEP1"
+                        android:textColor="@color/baseColor"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="17dp"/>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="30dp"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="30dp">
-                            <RelativeLayout
-                                android:layout_width="75dp"
-                                android:layout_height="match_parent">
-                                <TextView
-                                    android:layout_centerInParent="true"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="7dp"
-                                    android:text="할인조건"
-                                    android:textColor="@color/baseColor"
-                                    android:textSize="18sp"
-                                    android:id="@+id/txt1"/>
-                            </RelativeLayout>
-                            <EditText
-                                android:paddingLeft="5dp"
-                                android:inputType="textEmailAddress"
-                                android:singleLine="true"
-                                android:theme="@style/EditTheme"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="bottom"
-                                android:hint="이만원 이상 주문했을 때"
-                                android:textColor="@color/baseColor"
-                                android:textSize="18sp"
-                                android:id="@id/edit1"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="30dp"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="8dp">
-                            <RelativeLayout
-                                android:layout_width="75dp"
-                                android:layout_height="match_parent">
-                                <TextView
-                                    android:layout_centerInParent="true"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="혜택"
-                                    android:textColor="@color/baseColor"
-                                    android:textSize="18sp"
-                                    android:id="@+id/txt2"/>
-                            </RelativeLayout>
-
-                            <EditText
-                                android:paddingLeft="5dp"
-                                android:inputType="textEmailAddress"
-                                android:singleLine="true"
-                                android:theme="@style/EditTheme"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="bottom"
-                                android:hint="2000원 할인"
-                                android:textColor="@color/baseColor"
-                                android:textSize="18sp"
-                                android:id="@id/edit2"/>
-                        </LinearLayout>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="잘 모르겠어요!"
-                            android:textColor="@color/baseColor"
-                            android:textSize="15sp"
-                            android:layout_marginTop="35dp"/>
-                        <TextView
-                            android:id="@+id/next"
-                            android:layout_width="match_parent"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:layout_marginTop="30dp"
-                            android:layout_height="40dp"
-                            android:text="다음"
-                            android:gravity="center"
-                            android:textSize="15sp"
-                            android:textColor="@color/cursorColor"
-                            android:background="@drawable/round_button_gray"/>
                     </LinearLayout>
+                <ScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/start_layout">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginTop="17dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txt_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:text="어떤 내용의 쿠폰을 등록하시겠어요?"
+                                android:textColor="@color/baseColor"
+                                android:textSize="20sp" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="30dp"
+                                android:layout_marginRight="30dp"
+                                android:orientation="horizontal">
+
+                                <RelativeLayout
+                                    android:layout_width="75dp"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:id="@+id/txt1"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerInParent="true"
+                                        android:layout_marginBottom="7dp"
+                                        android:text="할인조건"
+                                        android:textColor="@color/baseColor"
+                                        android:textSize="18sp" />
+                                </RelativeLayout>
+
+                                <EditText
+                                    android:id="@id/edit1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="bottom"
+                                    android:hint="이만원 이상 주문했을 때"
+                                    android:inputType="textEmailAddress"
+                                    android:paddingLeft="5dp"
+                                    android:singleLine="true"
+                                    android:textColor="@color/baseColor"
+                                    android:textSize="18sp"
+                                    android:theme="@style/EditTheme" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginRight="30dp"
+                                android:orientation="horizontal">
+
+                                <RelativeLayout
+                                    android:layout_width="75dp"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:id="@+id/txt2"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerInParent="true"
+                                        android:text="혜택"
+                                        android:textColor="@color/baseColor"
+                                        android:textSize="18sp" />
+                                </RelativeLayout>
+
+                                <EditText
+                                    android:id="@id/edit2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="bottom"
+                                    android:hint="2000원 할인"
+                                    android:inputType="textEmailAddress"
+                                    android:paddingLeft="5dp"
+                                    android:singleLine="true"
+                                    android:textColor="@color/baseColor"
+                                    android:textSize="18sp"
+                                    android:theme="@style/EditTheme" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/forgetBtn"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="35dp"
+                                android:gravity="center"
+                                android:text="잘 모르겠어요!"
+                                android:textColor="@color/baseColor"
+                                android:textSize="15sp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="30dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="30dp"
+                                android:lineSpacingExtra="3dp"
+                                android:text="@string/forgetCouponStep1"
+                                android:textColor="@color/baseColor"
+                                android:textSize="16sp"
+                                android:visibility="gone"
+                                android:id="@+id/forgetText"/>
+
+                            <TextView
+                                android:id="@+id/next"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="30dp"
+                                android:layout_marginRight="20dp"
+                                android:layout_marginBottom="15dp"
+                                android:background="@drawable/round_button_gray"
+                                android:gravity="center"
+                                android:text="다음"
+                                android:textColor="@color/cursorColor"
+                                android:textSize="15sp" />
+                        </LinearLayout>
+                    </RelativeLayout>
+                </ScrollView>
                 </RelativeLayout>
-            </ScrollView>
+
 
         </RelativeLayout>
+
         <ImageView
             android:id="@+id/harin_coupon"
             android:layout_width="wrap_content"
@@ -174,7 +209,6 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:src="@drawable/harin_login_coupon"
-            android:visibility="visible"
-            />
+            android:visibility="visible" />
     </FrameLayout>
 </LinearLayout>
