--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_sign_up2.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_sign_up2.xml
@@ -92,7 +92,8 @@
                             android:singleLine="true"
                             android:theme="@style/EditTheme"
                             android:hint="닉네임"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp"
+                            android:maxLength="6"/>
                         <EditText
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="15dp"
