--- a/NowSaleAndroidApp/app/src/main/res/layout/fragment_ex4.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/fragment_ex4.xml
@@ -237,6 +237,7 @@
                             android:text="단골가게를 등록하시면"
                             android:textColor="@color/baseColor"
                             android:id="@+id/notext2"
+                            android:visibility="gone"
                             />
                         <TextView
                             android:layout_marginTop="3dp"
